--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ curl -O larbs.xyz/larbs.sh</br>
 
 <p>I'll be posting updates about LARBS either on <a target="_blank" href="http://lukesmith.xyz/rss.xml">my RSS feed</a> or on <a target="_blank" href="https://twitter.com/lukesfiat">Twitter</a>.</p>
 
+<h3>You do the math!</h3>
+
 <footer>
 <a href="https://gnu.org"><img src="pix/gnu-linux.jpg"></a> +
 <a href="https://i3wm.org"><img src="pix/i3.jpg"></a> +
