link to program info added

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <p>The LARBS are a series of shell scripts that will automatically install a fully-featured Arch Linux i3-gaps Desktop Environment, providing a perfect composite of both functionality and customizability.</p>
 
-<p><b>Warning!</b> Until I put up a video on YouTube on these scripts, they are in still actively in development and the usage may be haphazard or non-functional at times. I'm literally testing these on new installs several times a day, making several dozen little tweaks every 24 hours. Only run these on new systems where there is no threat of data loss (although I don't see how data loss could happen given what the scripts do, just exercise caution until the official release). If you do run into errors, email me (<a href="mailto:luke@lukesmith.xyz">luke@lukesmith.xyz</a>) and I might give you some credit.</p>
-
 <p>For the official announcement of release, follow me on <a href="https://youtube.com/lukesmithxyz">YouTube</a>, by <a href="http://lukesmith.xyz/rss.xml">RSS</a> or on Twitter (<a href="https://twitter.com/lukesfiat">@lukesfiat</a>).</p>
+
+<b>Want to know what LARBS installs and configures? Check out <a href="programs.html">What's Inside of LARBS?</a></b>
 
 <h3>Installation</h3>
 
