--- a/programs.html
+++ b/programs.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" href="pix/faveicon.ico">
 <title>Programs Installed in LARBS</title>
 </head>
-<h1>LARBS</h1>
+<h1>What's Inside of LARBS?</h1>
 
 <a href="index.html">Back to main page</a>
 
@@ -42,7 +42,9 @@
 <p>Programs here you won't necessarily use directly, but are important tools for other programs.</p>
 
 <ul>
-		<li>mediainfo, poppler, highlight, w3m, atool, libcaca &ndash; programs for getting previews of various things in ranger, each has additional uses</li>
+	<li>Pulseaudio &ndash; audio system</li>
+	<li>Network Manager &ndash; exactly what it sound like</li>
+		<li>mediainfo, poppler, highlight, w3m, atool, libcaca &ndash; programs for getting previews of various things in ranger; each has additional uses</li>
 		<li>notmuch, notmuch-mutt, offlineimap, msmtp &ndash; backend email tools</li>
 		<li>unzip, unrar &ndash; for archive extraction</li>
 		<li>ntfs-3g, dosfstools &ndash; for handling Windows-formatted USBs</li>
