--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ curl -O larbs.xyz/larbs.sh</br>
 <footer>
 <a href="https://gnu.org"><img src="pix/gnu-linux.jpg"></a> +
 <a href="https://i3wm.org"><img src="pix/i3.jpg"></a> +
-<a href="http://vim.org"><img src="pix/vim.jpg"></a> +
+<a href="http://www.vim.org"><img src="pix/vim.jpg"></a> +
 <a href="https://en.wikipedia.org/wiki/Autism"><img src="pix/autism.jpg"></a> =
 <a href="http://larbs.xyz"><img src="pix/larbs.jpg"></a>
 
