--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
 <p>The LARBS are a series of shell scripts that will automatically install a fully-featured Arch Linux i3-gaps Desktop Environment, providing a perfect composite of both functionality and customizability.</p>
 
-<p>For the official announcement of release, follow me on <a href="https://youtube.com/lukesmithxyz">YouTube</a>, by <a href="http://lukesmith.xyz/rss.xml">RSS</a> or on Twitter (<a href="https://twitter.com/lukesfiat">@lukesfiat</a>).</p>
+<p><a target="_blank" href="https://github.com/lukesmithxyz/larbs">Github link</a>.</p>
 
-<b>Want to know what LARBS installs and configures? Check out <a href="programs.html">What's Inside of LARBS?</a></b>
+<p><b>Want to know what LARBS installs and configures? Check out <a href="programs.html">What's Inside of LARBS?</a></b></p>
+
+<p><b>Want to see some screenshots of LARBS? <a href="previews.html">Previews of LARBS</a>.</b></p>
 
 <h3>Installation</h3>
 
