--- a/previews.html
+++ b/previews.html
@@ -7,6 +7,7 @@
 <link rel="icon" type="image/png" href="pix/faveicon.ico">
 <title>LARBS Previews</title>
 </head>
+<body>
 <h1>Previews of LARBS</h1>
 
 <p>Here are a couple of screenshots of what LARBS can look like. It's easily customizable, so these all holistically should give you an idea.</p>
@@ -19,5 +20,5 @@
 
 
  
-
+</body>
 </html>
