--- a/previews.html
+++ b/previews.html
@@ -12,12 +12,15 @@
 
 <p>Here are a couple of screenshots of what LARBS can look like. It's easily customizable, so these all holistically should give you an idea.</p>
 
+<div id="prev">
+
 <a href="previews/bow.png"><img src="previews/bow.png.jpg"></a>
 
 <a href="previews/larbs.png"><img src="previews/larbs.png"></a>
 
 <a href="previews/varg.png.jpg"><img src="previews/varg.png"></a>
 
+</div>
 
  
 </body>
