ad hoc preview fix

--- a/previews.html
+++ b/previews.html
@@ -14,11 +14,11 @@
 
 <div id="prev">
 
-<a href="previews/bow.png"><img src="previews/bow.png.jpg"></a>
+<a href="previews/bow.png"><img width="650px" src="previews/bow.png.jpg"></a>
 
-<a href="previews/larbs.png"><img src="previews/larbs.png"></a>
+<a href="previews/larbs.png"><img width="650px" src="previews/larbs.png"></a>
 
-<a href="previews/varg.png.jpg"><img src="previews/varg.png"></a>
+<a href="previews/varg.png.jpg"><img width="650px" src="previews/varg.png"></a>
 
 </div>
 
