added asian girl preview

--- a/previews.html
+++ b/previews.html
@@ -18,6 +18,8 @@
 
 <a href="previews/larbs.png"><img width="650px" src="previews/larbs.png"></a>
 
+<a href="previews/asian.png.jpg"><img width="650px" src="previews/asian.png"></a>
+
 <a href="previews/varg.png.jpg"><img width="650px" src="previews/varg.png"></a>
 
 </div>
