--- a/previews.html
+++ b/previews.html
@@ -12,6 +12,8 @@
 
 <p>Here are a couple of screenshots of what LARBS can look like. It's easily customizable, so these all holistically should give you an idea.</p>
 
+<p>Feel free to send in your own pix of gettin' stuff done in the system (or at least pretending to look that way).</p>
+
 <div id="prev">
 
 <a href="previews/bow.png"><img width="650px" src="previews/bow.png.jpg"></a>
