--- a/programs.html
+++ b/programs.html
@@ -73,7 +73,7 @@
 
 <p>You can also get transmission, a torrent client, which by default, I have the terminal interface installed (Mod+F6).</p>
 
-<p>There is also an option to install mroe complete fonts, giving you fonts for emojis, Chinese, Japanese, Korean and ancient languages.</p>
+<p>There is also an option to install more complete fonts, giving you fonts for emojis, Chinese, Japanese, Korean and ancient languages.</p>
 
 
 <a href="index.html">Back to main page</a>
