fixes for web compatibility

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
 <p>In any install of Arch Linux, simply log in as the root user and run the following in the terminal:</p>
 
 <code>
-curl -O larbs.xyz/larbs.sh</br>
+curl -LO larbs.xyz/larbs.sh</br>
 
 bash larbs.sh
 
