--- a/www/previews.html
+++ b/www/previews.html
@@ -16,6 +16,8 @@
 
 <div id="prev">
 
+<a href="previews/pic.jpg"><img width="650px" src="previews/pic.jpg"></a>
+
 <a href="previews/bow.png"><img width="650px" src="previews/bow.png.jpg"></a>
 
 <a href="previews/larbs.png"><img width="650px" src="previews/larbs.png"></a>
@@ -26,6 +28,6 @@
 
 </div>
 
- 
+
 </body>
 </html>
