--- a/www/programs.html
+++ b/www/programs.html
@@ -18,9 +18,11 @@
 <ul>
 		<li>i3-gaps (window manager)</li>
 		<li>polybar &ndash; status bar (the thing at the top)</li>
-		<li>urxvt &ndash; terminal emulator (Mod+Enter)</li>
+		<li>qutebrowser &ndash; a vim-based and extensible browser</li>
+		<li>st (<a target="_blank" href="https://github.com/lukesmithxyz/st">my own personal build</a>) &ndash; terminal emulator (Mod+Enter)</li>
 		<li>rofi &ndash; run prompt (Mod+d)</li>
 		<li>ranger &ndash; file browser (Mod+r; also numerous tools for getting previews)</li>
+		<li>sc-im &ndash; a vim-centered terminal spreadsheet manager</li>
 		<li>neomutt &ndash; email (Mod+e; requires some setup)</li>
 		<li>w3m &ndash; terminal browser and tool for viewing images in the terminal</li>
 		<li>newsbeuter &ndash; RSS reader (Mod+n)</li>
@@ -31,7 +33,6 @@
 		<li>youtube-dl &ndash; terminal tool for downloading online videos/audio/playlists from various sites</li>
 		<li>feh (image viewer and used for wallpapers)</li>
 		<li>mupdf &ndash; .pdf viewer</li>
-		<li>evince &ndash; another .pdf viewer, not as lightweight as mupdf, but better for viewing enormous .pdfs</li>
 		<li>scrot &ndash; for taking screenshots</li>
 		<li>tmux &ndash; terminal multiplexer</li>
 		<li>R &ndash; used as a calculator (Mod+a), but can be used generally as well</li>
@@ -49,15 +50,10 @@
 		<li>unzip, unrar &ndash; for archive extraction</li>
 		<li>ntfs-3g, dosfstools &ndash; for handling Windows-formatted USBs</li>
 		<li>mpd &ndash; backend for music/audio</li>
-		<li>pywal &ndash; theme setter</li>
 		<li>compton &ndash; composite manager</li>
 </ul>
 
 <h2>Optional installation</h2>
-
-<h3>Browsers to choose from</h3>
-
-<p>qutebrowser, Firefox, Waterfox, Palemoon. I mostly use Waterfox nowadays; I recommend the VimFX plugin.</p>
 
 <h3>LaTeX Packages</h3>
 
