--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 	<tr><td><a href="pix/arch.jpg"><img src="pix/arch.jpg" width="300"></a></td></tr>
 </table>
 
-<p>The LARBS are a series of shell scripts that will automatically install a fully-featured Arch Linux i3-gaps Desktop Environment, providing a perfect composite of both functionality and customizability.</p>
+<p>The LARBS are a series of shell scripts that will automatically install a fully-featured i3-gaps Desktop Environment, providing a perfect composite of both functionality and customizability.</p>
 
 <p><a target="_blank" href="https://github.com/lukesmithxyz/larbs">Github link</a>.</p>
 
@@ -26,7 +26,9 @@
 
 <h3>Installation</h3>
 
-<p>In any install of Arch Linux, simply log in as the root user and run the following in the terminal:</p>
+<p>LARBS can be installed on any derivative of Arch Linux that uses the Arch repositories (including Manjaro and Antergos, etc. (but not Parabola, e.g.)). I recommend you to install it on a fresh installation to avoid conflict with other desktop environments, although you can run it on an already existing install. <b>Note:</b> LARBS will install config files in the home directory of the user you give it. It will not wipe your Documents or anything, but it will overwrite your <code>~/.bashrc</code>, etc. If you have config files you want to hold on to, either back them up or you can select to install LARBS to another user.</p>
+
+ <p>To install, simply log in as the root user and run the following in the terminal:</p>
 
 <code>
 curl -LO larbs.xyz/larbs.sh</br>
@@ -35,10 +37,7 @@ bash larbs.sh
 
 </code>
 
-<p>This will begin a prompt and the installation after some setup. Installation time can vary depending on internet connection. Don't be worried if it takes even a little more than an hour: it's setting <em>everything</em> up.</p>
-
-<p>You should be able to run LARBS on an already-configured system, and also other distributions that use Arch repositories, but I recommend running LARBS only on fresh Arch installations (I've never tried it myself on other distros, but it should work on a distro with pacman and access to the Arch repositories). </p>
-
+<p>This will begin a prompt and the installation after some setup. Installation time will vary depending on your internet connection. Don't be worried if it takes even a little more than an hour: it's setting <em>everything</em> up.</p>
 
 <h3>Learning the system is fun and easy!</h3>
 
