--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 </head>
 <h1>LARBS</h1>
 
-<h2><a target="_blank" href="http://lukesmith.xyz">Luke's</a> Auto-Rice Bootstrapping Scripts</h2>
+<h2><a target="_blank" href="https://lukesmith.xyz">Luke's</a> Auto-Rice Bootstrapping Scripts</h2>
 
 <table class="image">
 	<caption align="bottom">(Not actually Luke)</caption>
@@ -54,7 +54,7 @@ bash larbs.sh
 
 <p>You can also ask me questions via email at <a href="mailto:luke@lukesmith.xyz">luke@lukesmith.xyz</a>.</p>
 
-<p>I'll be posting updates about LARBS either on <a target="_blank" href="http://lukesmith.xyz/rss.xml">my RSS feed</a> or on <a target="_blank" href="https://twitter.com/lukesfiat">Twitter</a>.</p>
+<p>I'll be posting updates about LARBS either on <a target="_blank" href="https://lukesmith.xyz/rss.xml">my RSS feed</a> or on <a target="_blank" href="https://twitter.com/lukesfiat">Twitter</a>.</p>
 
 <h3>You do the math!</h3>
 
@@ -63,12 +63,12 @@ bash larbs.sh
 <a href="https://i3wm.org"><img src="pix/i3.jpg"></a> +
 <a href="http://www.vim.org"><img src="pix/vim.jpg"></a> +
 <a href="https://en.wikipedia.org/wiki/Autism"><img src="pix/autism.jpg"></a> =
-<a href="http://larbs.xyz"><img src="pix/larbs.jpg"></a>
+<a href="https://larbs.xyz"><img src="pix/larbs.jpg"></a>
 
 <hr>
 
 <img src="pix/brainlet.jpg"> +
-<a href="http://larbs.xyz"><img src="pix/larbs.jpg"></a> =
+<a href="https://larbs.xyz"><img src="pix/larbs.jpg"></a> =
 <img src="pix/big_brane.jpg">
 </footer>
 
