--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@ bash larbs.sh
 
 <ul>
 	<li>The documentation on the <a href="https://github.com/lukesmithxyz/voidrice">Github</a> page.</li>
-	<li>By pressing Super+F1 while in the system itself at any time. (Also <a target="_blank" href="https://github.com/LukeSmithxyz/voidrice/blob/master/.config/i3/i3_guide.md">here</a>.)</li>
+	<li>By pressing Super+F1 while in the system itself at any time. (Also <a target="_blank" href="https://github.com/LukeSmithxyz/voidrice/blob/master/.config/i3/i3_guide.rmd">here</a>.)</li>
 	<li>The many illustrative videos on <a target="_blank" href="https://youtube.com/lukesmithxyz">my YouTube channel</a>.</li>
 	<li>By just installing it and diving in!</li>
 </ul>
