forum link added

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
 
 <p><b>Want to see some screenshots of LARBS? <a href="previews.html">Previews of LARBS</a>.</b></p>
 
+<p><b>If you have questions, <a href="mailto:luke@lukesmith.xyz">email me</a> or ask on <a target="_blank" href="https://forum.lukesmith.xyz">the forum</a>.</b></p>
+
 <h3>Installation</h3>
 
 <p>LARBS can be installed on any derivative of Arch Linux that uses the Arch repositories (including Manjaro and Antergos, etc. (but not Parabola, e.g.)). I recommend you to install it on a fresh installation to avoid conflict with other desktop environments, although you can run it on an already existing install. <b>Note:</b> LARBS will install config files in the home directory of the user you give it. It will not wipe your Documents or anything, but it will overwrite your <code>~/.bashrc</code>, etc. If you have config files you want to hold on to, either back them up or you can select to install LARBS to another user.</p>
