robust instructions without larbs.xyz

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
  <p>To install, simply log in as the root user and run the following in the terminal:</p>
 
 <code>
-curl -LO larbs.xyz/larbs.sh</br>
+curl -LO lukesmith.xyz/larbs.sh</br>
 
 bash larbs.sh
 
@@ -65,12 +65,12 @@ bash larbs.sh
 <a href="https://i3wm.org"><img src="pix/i3.jpg"></a> +
 <a href="http://www.vim.org"><img src="pix/vim.jpg"></a> +
 <a href="https://en.wikipedia.org/wiki/Autism"><img src="pix/autism.jpg"></a> =
-<a href="https://larbs.xyz"><img src="pix/larbs.jpg"></a>
+<a href="http://larbs.xyz"><img src="pix/larbs.jpg"></a>
 
 <hr>
 
 <img src="pix/brainlet.jpg"> +
-<a href="https://larbs.xyz"><img src="pix/larbs.jpg"></a> =
+<a href="http://larbs.xyz"><img src="pix/larbs.jpg"></a> =
 <img src="pix/big_brane.jpg">
 </footer>
 
