progs.csv fix and doc changes

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 
 <table class="image">
 	<caption align="bottom">(Not actually Luke)</caption>
-	<tr><td><a href="pix/arch.jpg"><img src="pix/arch.jpg" width="300"></a></td></tr>
+	<tr><td><a href="pix/arch.jpg"><img src="pix/larbs.png" width="300"></a></td></tr>
 </table>
 
 <p>The LARBS are a series of shell scripts that will automatically install a fully-featured i3-gaps Desktop Environment, providing a perfect composite of both functionality and customizability.</p>
@@ -28,7 +28,7 @@
 
 <h3>Installation</h3>
 
-<p>LARBS can be installed on any derivative of Arch Linux that uses the Arch repositories (including Manjaro and Antergos, etc. (but not Parabola, e.g.)). I recommend you to install it on a fresh installation to avoid conflict with other desktop environments, although you can run it on an already existing install. <b>Note:</b> LARBS will install config files in the home directory of the user you give it. It will not wipe your Documents or anything, but it will overwrite your <code>~/.bashrc</code>, etc. If you have config files you want to hold on to, either back them up or you can select to install LARBS to another user.</p>
+<p>LARBS can be installed on any derivative of Arch Linux that uses the Arch repositories (including Manjaro, Antergos and Parabola, etc.). I recommend you to install it on a fresh installation to avoid conflict with other desktop environments, although you can run it on an already existing install. <b>Note:</b> LARBS will install config files in the home directory of the user you give it. It will not wipe your Documents or anything, but it will overwrite your <code>~/.bashrc</code>, etc. If you have config files you want to hold on to, either back them up or you can select to install LARBS to another user.</p>
 
  <p>To install, simply log in as the root user and run the following in the terminal:</p>
 
