--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <table class="image">
 	<caption align="bottom">(Not actually Luke)</caption>
-	<tr><td><a href="pix/arch.jpg"><img src="pix/larbs.png" width="300"></a></td></tr>
+	<tr><td><a href="pix/larbs.png"><img src="pix/larbs.png" width="300"></a></td></tr>
 </table>
 
 <p>LARBS is an efficient shell script that will install a fully-featured tiling window manager-based system on any Arch Linux-based system, without any of the routine of manual post-install processes and configuration.</p>
@@ -29,7 +29,7 @@ But LARBS can also be forked <a target="_blank" href="https://github.com/lukesmi
 <p>On any (preferrably fresh) install of an Arch Linux-based distribution, just run the following as the root user:</p>
 
 <code>
-curl -LO lukesmith.xyz/larbs.sh</br>
+curl -LO larbs.xyz/larbs.sh</br>
 bash larbs.sh
 </code>
 
@@ -47,7 +47,7 @@ bash larbs.sh
 
 <ul>
 	<li>The documentation on the <a href="https://github.com/lukesmithxyz/voidrice">Github</a> page.</li>
-	<li>By pressing Super+F1 while in the system itself at any time. (Also <a target="_blank" href="https://github.com/LukeSmithxyz/voidrice/blob/master/.config/i3/i3_guide.rmd">here</a>.)</li>
+	<li>By pressing Super+F1 while in the system itself at any time. (Also <a href="larbs_readme.pdf">here</a>.)</li>
 	<li>The many illustrative videos on <a target="_blank" href="https://youtube.com/lukesmithxyz">my YouTube channel</a>, some of which are easily watchable in LARBS by pressing <code>super+shift+e</code>.</li>
 	<li>By just installing it and diving in!</li>
 </ul>
